[gd_scene load_steps=22 format=3 uid="uid://clkedmwe4xw0b"]

[ext_resource type="Script" path="res://Game/Game.gd" id="1_iqcmv"]
[ext_resource type="PackedScene" uid="uid://dm5qvaa1qimwq" path="res://Data/Levels/TheForest/TheForest.tscn" id="2_xa7ra"]
[ext_resource type="Resource" uid="uid://c4064o7rrsy36" path="res://Data/Items/DraculasKnives/DraculasKnives.tres" id="2_xqarq"]
[ext_resource type="Resource" uid="uid://dhbycs5j4to6b" path="res://Data/Items/DragonCloak/DragonCloak.tres" id="3_y0dea"]
[ext_resource type="Resource" uid="uid://bkxc4j0i03skk" path="res://Data/Items/Hammer/Hammer.tres" id="4_im0t6"]
[ext_resource type="Resource" uid="uid://ciom03ipb83hk" path="res://Data/Items/HolyFire/HolyFire.tres" id="5_qew2g"]
[ext_resource type="Resource" uid="uid://ds3bgi1j8ywkc" path="res://Data/Items/LightningBow/LightningBow.tres" id="6_7jb6r"]
[ext_resource type="Resource" uid="uid://b44nfpsd5kbd4" path="res://Data/Items/ShortSword/ShortSword.tres" id="7_tnt3y"]
[ext_resource type="Resource" uid="uid://c7npess6g8cti" path="res://Data/Items/TokenOfLove/TokenOfLove.tres" id="8_4cicd"]
[ext_resource type="Resource" uid="uid://dhmba6khldbxi" path="res://Data/Items/ArcingOrb/ArcingOrb.tres" id="9_062os"]
[ext_resource type="Resource" uid="uid://dst01geftrhcn" path="res://Data/Items/ZeusSword/ZeusSword.tres" id="10_eskxg"]
[ext_resource type="Resource" uid="uid://olilhse4njhm" path="res://Data/Items/TaintedFlask/TaintedFlask.tres" id="11_au730"]
[ext_resource type="Script" path="res://Game/TurnManager/TurnManager.gd" id="12_q02uk"]
[ext_resource type="Script" path="res://Game/SpawnHandler/SpawnHandler.gd" id="13_8agfr"]
[ext_resource type="PackedScene" uid="uid://b78b62i3ejtqc" path="res://UI/BossOverlay/BossOverlay.tscn" id="15_agi7d"]
[ext_resource type="PackedScene" uid="uid://baighpghx6fu3" path="res://Menus/UpgradeMenu/UpgradeMenu.tscn" id="15_tirfb"]
[ext_resource type="FontFile" uid="uid://delvnctbli24y" path="res://Assets/fonts/Caudex-Bold.ttf" id="16_b5t7g"]
[ext_resource type="FontFile" uid="uid://bvvb51yov72a0" path="res://Assets/fonts/Caudex-Regular.ttf" id="17_ol6ej"]
[ext_resource type="PackedScene" path="res://Menus/MainMenu/MenuButton/MenuButton.tscn" id="18_i8dvm"]

[sub_resource type="FontVariation" id="FontVariation_ihk8i"]
base_font = ExtResource("16_b5t7g")
spacing_glyph = 4

[sub_resource type="FontVariation" id="FontVariation_4axqc"]
base_font = ExtResource("17_ol6ej")

[node name="Game" type="Node2D"]
script = ExtResource("1_iqcmv")
level_scene = ExtResource("2_xa7ra")
all_items = Array[Resource("res://Data/Items/ITEM_DATA.gd")]([ExtResource("2_xqarq"), ExtResource("3_y0dea"), ExtResource("4_im0t6"), ExtResource("5_qew2g"), ExtResource("6_7jb6r"), ExtResource("7_tnt3y"), ExtResource("8_4cicd"), ExtResource("9_062os"), ExtResource("10_eskxg"), ExtResource("11_au730")])

[node name="TurnManager" type="Node" parent="."]
script = ExtResource("12_q02uk")

[node name="SpawnHandler" type="Node" parent="."]
script = ExtResource("13_8agfr")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="BossOverlay" parent="HUD" instance=ExtResource("15_agi7d")]
visible = false

[node name="Menus" type="CanvasLayer" parent="."]

[node name="UpgradeMenu" parent="Menus" instance=ExtResource("15_tirfb")]

[node name="VictoryScreen" type="CanvasLayer" parent="Menus"]
layer = 2
visible = false

[node name="Background" type="ColorRect" parent="Menus/VictoryScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.356863)

[node name="Container" type="VBoxContainer" parent="Menus/VictoryScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.5
offset_top = -354.5
offset_right = 279.5
offset_bottom = 354.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Menus/VictoryScreen/Container"]
custom_minimum_size = Vector2(221, 30)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_ihk8i")
theme_override_font_sizes/font_size = 120
text = "VICTORY"
horizontal_alignment = 1

[node name="Message" type="RichTextLabel" parent="Menus/VictoryScreen/Container"]
custom_minimum_size = Vector2(221, 400)
layout_mode = 2
theme_override_fonts/normal_font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "The Forgotten King has been banished from this realm... For now...

Thank you so much for playing!

The full game will not end here... it'll have more bosses, more weapons, and hopefully, more fun. Stay tuned for updates!"

[node name="PlayAgainButton" parent="Menus/VictoryScreen/Container" instance=ExtResource("18_i8dvm")]
layout_mode = 2
text = "PLAY AGAIN?"

[node name="MainMenuButton" parent="Menus/VictoryScreen/Container" instance=ExtResource("18_i8dvm")]
layout_mode = 2
text = "MAIN MENU"

[node name="GameOverScreen" type="CanvasLayer" parent="Menus"]
layer = 2
visible = false

[node name="Background" type="ColorRect" parent="Menus/GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.356863)

[node name="Container" type="VBoxContainer" parent="Menus/GameOverScreen"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -273.5
offset_right = 93.0
offset_bottom = 273.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Menus/GameOverScreen/Container"]
custom_minimum_size = Vector2(221, 30)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_ihk8i")
theme_override_font_sizes/font_size = 120
text = "GAME OVER"
horizontal_alignment = 1

[node name="PlayAgainButton" parent="Menus/GameOverScreen/Container" instance=ExtResource("18_i8dvm")]
layout_mode = 2
text = "PLAY AGAIN?"

[node name="MainMenuButton" parent="Menus/GameOverScreen/Container" instance=ExtResource("18_i8dvm")]
layout_mode = 2
text = "MAIN MENU"

[connection signal="pressed" from="Menus/VictoryScreen/Container/PlayAgainButton" to="." method="_on_VictoryScreen_PlayAgainButton_pressed"]
[connection signal="pressed" from="Menus/VictoryScreen/Container/MainMenuButton" to="." method="_on_VictoryScreen_MainMenuButton_pressed"]
[connection signal="pressed" from="Menus/GameOverScreen/Container/PlayAgainButton" to="." method="_on_GameOverScreen_PlayAgainButton_pressed"]
[connection signal="pressed" from="Menus/GameOverScreen/Container/MainMenuButton" to="." method="_on_GameOverScreen_MainMenuButton_pressed"]
